--- a/dynas.ini
+++ b/dynas.ini
@@ -11,7 +11,7 @@ navicat=D:\nsis\soft\navicat150_premium_cs_x64.exe
 
 [jdk]
 jdk=D:\nsis\soft\jdk-8u66-windows-x64.exe
-JAVA_HOME=D:\java\jdk1.8
+JAVA_HOME=D:\nsis\java\jdk1.8
 
 [tomcat]
 tomcat=D:\nsis\soft\apache-tomcat-8.0.35\bin\startup.bat
